<resources>
    <string name="app_name">Jose\'s Tip Calculator</string>
    <string name="label_bill">Bill</string>
    <string name="label_tip_percent">Tip (%)</string>
    <string name="label_tip">Tip each</string>
    <string name="label_total">Total each</string>
    <string name="amount_bill_hint">Enter Bill</string>
    <string name="amount_tip_percent_hint">Enter Tip (%)</string>
    <string name="button_calculate">CALCULATE</string>
    <string name="amount_people_hint">How many People</string>
    <string name="label_tax">8.13% Tax</string>
</resources>